--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
     defaultConfig {
         applicationId "com.martialcoder.itunesmovies"
-        minSdk 26
+        minSdk 21
         targetSdk 30
         versionCode 6
         versionName "1.6"
@@ -72,4 +72,10 @@ dependencies {
 
     //Roboto Theme
     //implementation "com.rhexgomez.typer:typer-roboto:2.0.0"
+
+    // Requestly Debugger
+    debugImplementation "io.requestly:requestly-android:2.0.0"
+    releaseImplementation "io.requestly:requestly-android-noop:2.0.0"
+    debugImplementation "io.requestly:requestly-android-okhttp:2.0.0"
+    releaseImplementation "io.requestly:requestly-android-okhttp-noop:2.0.0"
 }
